# aimemos

./: .env.example  .gitignore  ARCHITECTURE.md  CHAT_FEATURE.md  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  pyproject.toml  test_chat.py
aimemos/: __init__.py  app.py  auth.py  config.py  dependencies.py  main.py  models.py  routes.py  storage.py
aimemos/api/: __init__.py  dependencies.py
aimemos/api/v1/: __init__.py  router.py
aimemos/api/v1/endpoints/: __init__.py  auth.py  chats.py  documents.py  folders.py  knowledge_bases.py  memos.py  rag.py
aimemos/db/: __init__.py  database.py  storage.py
aimemos/db/repositories/: __init__.py  chat_message.py  chat_session.py  document.py  folder.py  knowledge_base.py  memo.py  rag_index_task.py  user.py
aimemos/models/: __init__.py  chat_message.py  chat_session.py  document.py  folder.py  knowledge_base.py  memo.py  rag_index_task.py  user.py
aimemos/schemas/: __init__.py  chat_message.py  chat_session.py  document.py  folder.py  knowledge_base.py  memo.py  rag_index_task.py  user.py
aimemos/services/: __init__.py  auth.py  chat.py  document.py  file_handler.py  folder.py  knowledge_base.py  memo.py  rag_sync_hook.py
data/kb/: .gitkeep  README.md
pocketflow/: rag_workflow.yaml
rag/: ARCHITECTURE.txt  ASYNC_INDEXING.md  AUTO_SYNC.md  CHANGELOG.md  DESIGN_RAG.md  INTEGRATION.md  README.md  __init__.py  embeddings.py  ingest.py  integration.py  llm_client.py  query_example.py  requirements.txt  vector_store.py  verify.py
scripts/: test_import_rag_integration.py  test_rag_import.py
