[project]
name = "aimemos"
version = "0.1.0"
description = "AI-based personal knowledge base service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "pocketflow>=0.0.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
aimemos = "aimemos.main:main"

[tool.uv]
package = true
